Nextflow/First_Pipe/work/5e/d7d8b84ec4bb32fd8c3c9efdaa392a/.command.err
  File "/mnt/Disc4T/Projects/Miniprojects/Nextflow/First_Pipe/bin/parse_bwt2_reports.py", line 23
    print(Hi!)
            ^
SyntaxError: invalid syntax
